objects/Hotel_Theme__c.object
<CustomObject>
    <description>Object created to store hotel theme data</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Hotel_Themes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Airport_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All hotels with physical link to the airport or hotels with &quot;airport&quot; or equivalent in the name, provided they have shuttle service</inlineHelpText>
        <label>Airport Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_inclusive_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All hotels with an all-inclusive rate plan (includes minimum of food and drink, plus some activities offered at the hotel)</inlineHelpText>
        <label>All-inclusive Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_suite_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All rooms must be suites</inlineHelpText>
        <label>All-suite Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apartment_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A self-contained housing unit that occupies part of a building. Types include studio or efficiency units and apartments with 1 or more bedrooms.  Laundry facilities are usually kept in a separate area accessible to all the tenants/guests in the building.</inlineHelpText>
        <label>Apartment Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beach_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hotel guests must have reasonable walking access to beach/water (pathway/tunnels preferred).  Water view availability required.  No properties can be located between hotel &amp; water.</inlineHelpText>
        <label>Beach Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bed_and_Breakfast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Also called a B &amp; B, this lodging is typically operated out of a large single family residence. Guests are accommodated at night in private bedrooms (which may or may not be equipped with private baths) and served breakfast in the morning.</inlineHelpText>
        <label>Bed and Breakfast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boutique_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>No more than 150 rooms, not a big box chain
Architecture &amp; design- style, distinction, warmth, intimacy, modern; historic elements with chic elegance
Include:
Kimpton
Small Luxury Hotels Chain
Joie de Vivre Hotels
Leading Small Hotels of the World</inlineHelpText>
        <label>Boutique Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include:
Hotels attached to conference centers
Hotels with meeting rooms
Hotels explicitly targeting business traveler in bold tagline

Business hotels must offer:
In-room internet access
Access to fax/printer
Daily newspaper</inlineHelpText>
        <label>Business Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Casino_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any hotel with Casino checked in the Property Amenities</inlineHelpText>
        <label>Casino Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countryside_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rural location and significant hotel grounds, gardens, or distance to other buildings in a natural setting
Relaxing setting</inlineHelpText>
        <label>Countryside Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Boutique_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not more than 150 rooms, not a big box chain hotel
Architecture &amp; design
 - style, distinction, warmth, intimacy, modern,
 - combining historic elements with chic elegance
 - famous designer labeled</inlineHelpText>
        <label>Design/Boutique Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Famous designer labeled properties

Include:
Sanderson
Ian Schrager
Morgan Hotels
NH Hotels
art&apos;otel
Design Hotel
W Hotel</inlineHelpText>
        <label>Design Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatic: Bold tagline targeting families
Or
Must have 3: Cribs; Supervised childcare/activities; Playground; Child friendly pool; Family/shared rooms; Kitchen/kitchenette; Children&apos;s menu; Kids stay free (markets where rare); Games room; Baby monitor</inlineHelpText>
        <label>Family Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_run_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family-run Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Golf_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Properties with a 9+ hole golf course onsite (no par 3 courses)
Properties adjacent to 18+ hole golf course – Must have official relationship with golf course - Hotel must have ability to book tee times and provide transportation to the site</inlineHelpText>
        <label>Golf Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gourmet_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hotels attached to wineries

Any hotels with restaurants with these ratings:
Michelin: any rated restaurant
Zagat 20-30
Gault Millau: any rated restaurant 
***Must serve specialty food or drinks***</inlineHelpText>
        <label>Gourmet Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Sustainable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Meets World Heritage standards</inlineHelpText>
        <label>Green/Sustainable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Historically significant (e.g. historic mansions, schloss, fortresses, etc.)
Historic designation
The following chains are automatically included:
Relais Chateaux
Fairmont
Chateaux e Hotel du France
Historic Hotels of America
Pausadas
Paradores</inlineHelpText>
        <label>Historic Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>4.5 star and above</inlineHelpText>
        <label>Luxury Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_friendly_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any hotel with Pets Accepted in its policy section</inlineHelpText>
        <label>Pet-friendly Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Romantic_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically includes:
Couples only resorts; hotels in the luxury collection; hotels in the historic collection; TripAdvisor 75% rated pos. for couples/romantics or 75% rated pos. for amazing honeymoons
Many more details apply; see policy</inlineHelpText>
        <label>Romantic Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Catering_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Kitchen/kitchenette in room or apartment (no shared kitchens)</inlineHelpText>
        <label>Self-Catering Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spa_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must have a dedicated, full-service spa &amp; staff on site; at least 2 different massage treatments
Must offer 3 of the following:
Wraps/scrubs - 2 min; mani/pedi/facial - 2 min; Brand affiliation; private treatment rooms; sauna/steam room; Turkish bath</inlineHelpText>
        <label>Spa Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sports_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must have at least 4: Basketball; Football/Soccer Field; Tennis court; Badminton court;  Lg. gym; Golf; Pool; sports equipment; Table tennis; Bowling alley; Volleyball; Sailing; Other sports
A hotel specializing in one sport extensively may be considered</inlineHelpText>
        <label>Sports Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>Hotel Themes</relationshipLabel>
        <relationshipName>Hotel_Theme_Reviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must offer a unique, all-encompassing customer experience (think Ice Hotel)
Unique structure
Unique rooms, experience, etc.</inlineHelpText>
        <label>Unique Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Villa_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Stand-alone structure -or-
Property with standalone room categories</inlineHelpText>
        <label>Villa Hotel</label>
        <type>Checkbox</type>
    </fields>
    <label>Hotel Theme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Theme__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>Hotel Theme</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Themes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>